# streamlit_snowflake_demo

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  home.py  pyproject.toml  streamlit_app.py  streamlit_home.py  test_cnx_snow.py
.streamlit/: config.toml  secrets.demo.toml
pages/: 1_👻_Bug_report_demo.py  2_📄_Load_csv.py  3_💾_Offload_snowflake.py  streamlit_bug_report_demo.py  streamlit_home.py  streamlit_load_csv.py
