[project]
name = "streamlit-snowflake-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-manager>=1.6.0",
    "duckdb>=1.3.1",
    "polars>=1.31.0",
    "snowflake-connector-python>=3.15.0",
    "snowflake-snowpark-python>=1.33.0",
    "streamlit>=1.46.0",
]

[tool.ruff]
line-length = 200
