[project]
name = "streamlit-snowflake-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.55.0",
    "adbc-driver-manager>=1.6.0",
    "duckdb>=1.4.4",
    "plotly>=6.5.0",
    "polars>=1.35.0",
    "snowflake-connector-python[secure-local-storage]>=3.15.0",
    "snowflake-snowpark-python>=1.33.0",
]

[tool.ruff]
line-length = 120


[tool.uv]
dev-dependencies = ["prek>=0.3.4", "pytest>=7.0.0", "ruff>=0.14.0"]
